# decrypt

./: 1.txt  data_process.py  diancilu.mat  equipment_features.xlsx  process.py  station_status_judgment.py  test.py  topo.h  人力问答-孙玺-20231226.xlsx  人力问答-孙玺-20240329.xlsx  公司绩效管理办法.docx  台区线损智能分析程序接口说明.docx  员工自评表x.xlsx  李新媛教学教学案例.docx  省区实习-研发本部-智能算法部-于澎洋-出差报告V1.0(20230828).docx  省区实习-研发本部-智能算法部-于澎洋-出差报告V1.0(20230930).docx  省区实习-研发本部-智能算法部-于澎洋-出差报告V1.0(20231031).docx  省区实习-研发本部-智能算法部-于澎洋-出差报告V1.1(20231128).docx  研发本部-二级部门-姓名-出差策划及报告模板V1.2(20240306) .docx  线损智能分析应用0915.docx  线损智能分析应用0922.docx  线损智能分析数据项.xlsx  线损智能分析算法(1).docx
data/: LTU_voltage_A.txt  data_child_meter_ori.txt  data_device_type.txt  measure_point.txt  voltage_single.txt
topo/: CMakeLists.txt  big_data_topo.c  result.txt  result_all_C.txt  test.c
topo/data/: LTU_voltage_B.txt
